[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "typecho-password"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.5"
dependencies = [
    'importlib-metadata; python_version<"3.8"',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]