[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "typecho-password"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/veoco/typecho-password"
"Bug Tracker" = "https://github.com/veoco/typecho-password/issues"